--- a/.github/workflows/release-clang.yml
+++ b/.github/workflows/release-clang.yml
@@ -34,7 +34,7 @@ jobs:
           sudo update-alternatives --set clang++ /usr/bin/clang++-20
 
       - name: Pull Packages
-        run: sudo apt-get install build-essential cmake liblz4-dev libssl-dev libsqlite3-dev libopus-dev
+        run: sudo apt-get install build-essential liblz4-dev libssl-dev libsqlite3-dev libopus-dev
 
       - name: Get CMake and Ninja
         uses: lukka/get-cmake@latest
